tests/ui/union/union-with-drop-fields.thirunsafeck.stderr
error[E0740]: unions cannot contain fields that may need dropping
  --> $DIR/union-with-drop-fields.rs:11:5
   |
LL |     a: String,
   |     ^^^^^^^^^
   |
   = note: a type is guaranteed not to need dropping when it implements `Copy`, or when it is the special `ManuallyDrop<_>` type
help: when the type does not implement `Copy`, wrap it inside a `ManuallyDrop<_>` and ensure it is manually dropped
   |
LL |     a: std::mem::ManuallyDrop<String>,
   |        +++++++++++++++++++++++      +

error[E0740]: unions cannot contain fields that may need dropping
  --> $DIR/union-with-drop-fields.rs:19:5
   |
LL |     a: S,
   |     ^^^^
   |
   = note: a type is guaranteed not to need dropping when it implements `Copy`, or when it is the special `ManuallyDrop<_>` type
help: when the type does not implement `Copy`, wrap it inside a `ManuallyDrop<_>` and ensure it is manually dropped
   |
LL |     a: std::mem::ManuallyDrop<S>,
   |        +++++++++++++++++++++++ +

error[E0740]: unions cannot contain fields that may need dropping
  --> $DIR/union-with-drop-fields.rs:24:5
   |
LL |     a: T,
   |     ^^^^
   |
   = note: a type is guaranteed not to need dropping when it implements `Copy`, or when it is the special `ManuallyDrop<_>` type
help: when the type does not implement `Copy`, wrap it inside a `ManuallyDrop<_>` and ensure it is manually dropped
   |
LL |     a: std::mem::ManuallyDrop<T>,
   |        +++++++++++++++++++++++ +

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0740`.
